# ecfft-bn254

./: .gitignore  Cargo.toml  LICENSE  README.md  bls12-381_coset  bls12-381_isogenies  bn254_coset  bn254_isogenies  bn254_scalar_coset  bn254_scalar_isogenies  curve25519_isogenies  get_params.sage  get_params.sage.py
benches/: evaluations.rs  interpolation.rs
examples/: interpolate.rs
src/: bls12_381.rs  bn254.rs  bn254_scalar.rs  curve25519.rs  ecfft.rs  lib.rs
src/utils/: euclidean_algorithm.rs  isogeny.rs  matrix.rs  mod.rs
