[package]
name = "ecfft-bn254"
version = "0.1.0"
edition = "2018"
authors = ["William Borgeaud <williamborgeaud@gmail.com>"]

[dependencies]
ark-ff = "0.3.0"
ark-bn254 = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-std = "0.3.0"
ark-poly = "0.3.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "evaluations"
harness = false