[package]
name = "ecfft-bn254"
version = "0.1.0"
edition = "2018"
authors = ["William Borgeaud <williamborgeaud@gmail.com>"]

[dependencies]
ark-ff = "0.4.0"
ark-bn254 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-curve25519 = "0.4.0"
ark-std = "0.4.0"
ark-poly = "0.4.0"
num-bigint = "0.4.3"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "evaluations"
harness = false
